# axum-ts-msgboard-demo

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  main.rs  message.rs  shutdown.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx
