[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
hyper = { version = "0.14.19", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = [
    "macros",
    "signal",
    "rt-multi-thread",
] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace"] }
tracing = { version = "0.1.34", features = ["valuable"] }
tracing-subscriber = "0.3.11"
valuable = { version = "0.1.0", features = ["derive"] }
